added thumbnails hover

--- a/index.html
+++ b/index.html
@@ -96,32 +96,54 @@
                     <div class="row d-flex wrap">
                         <div class="col">
                             <div>
-                                <img src="./img/metal_lifting.jpg" alt="">
-                                <i class="fa-regular fa-circle-play fa-2x"></i>
+                                <img class="thumbnail" src="./img/metal_lifting.jpg" alt="">
+                                <i class="fa-regular fa-circle-play fa-2x thumbplay"></i>
                             </div>
                             <h4>Heavy Metal</h4>
                             <h5 class="subtitle">Subtitle</h5>
                         </div>
-                        
+
                         <div class="col">
-                            <img src="./img/stranger.jpeg" alt="">
+                            <div>
+                                <img class="thumbnail" src="./img/stranger.jpeg" alt="">
+                                <i class="fa-regular fa-circle-play fa-2x thumbplay"></i>
+                            </div>
                             <h4>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h4>
                             <h5 class="subtitle">Kyle Dixon & Michel Stain</h5>
                         </div>
+
                         <div class="col">
-                            <img src="./img/aquietplace.jpeg" alt="">
+                            <div>
+                                <img class="thumbnail" src="./img/aquietplace.jpeg" alt="">
+                                <i class="fa-regular fa-circle-play fa-2x thumbplay"></i>
+                            </div>
                             <h4>A quiet Place</h4>
                             <h5 class="subtitle">Subtitle</h5>
                         </div>
-                        <div class="col"><img src="./img/split.jpeg" alt="">
+
+                        <div class="col">
+                            <div>
+                                <img class="thumbnail" src="./img/split.jpeg" alt="">
+                                <i class="fa-regular fa-circle-play fa-2x thumbplay"></i>
+                            </div>
                             <h4>Split</h4>
                             <h5 class="subtitle">Subtitle</h5>
                         </div>
-                        <div class="col"><img src="./img/cure.jpeg" alt="">
+
+                        <div class="col">
+                            <div>
+                                <img class="thumbnail" src="./img/cure.jpeg" alt="">
+                                <i class="fa-regular fa-circle-play fa-2x thumbplay"></i>
+                            </div>
                             <h4>A cure for wellness</h4>
                             <h5 class="subtitle">Subtitle</h5>
                         </div>
-                        <div class="col"><img src="./img/sinister.jpeg" alt="">
+
+                        <div class="col">
+                            <div>
+                                <img class="thumbnail" src="./img/sinister.jpeg" alt="">
+                                <i class="fa-regular fa-circle-play fa-2x thumbplay"></i>
+                            </div>
                             <h4>Sinister</h4>
                             <h5 class="subtitle">Subtitle</h5>
                         </div>
@@ -135,11 +157,17 @@
 
                     <div class="row d-flex wrap">
                         <div class="col">
-                            <img src="./img/radar.jpeg" alt="">
+                            <div>
+                                <img class="thumbnail" src="./img/radar.jpeg" alt="">
+                                <i class="fa-regular fa-circle-play fa-2x thumbplay"></i>
+                            </div>
                             <h4>Release Radar</h4>
                         </div>
                         <div class="col">
-                            <img src="./img/mixdaily.jpeg" alt="">
+                            <div>
+                                <img class="thumbnail" src="./img/mixdaily.jpeg" alt="">
+                                <i class="fa-regular fa-circle-play fa-2x thumbplay"></i>
+                            </div>
                             <h4>Daily Mix 1</h4>
                         </div>
                     </div>
@@ -153,11 +181,17 @@
 
                     <div class="row d-flex wrap">
                         <div class="col">
-                            <img class="round-img" src="./img/youg.jpeg" alt="">
+                            <div>
+                                <img class="round-img thumbnail" src="./img/youg.jpeg" alt="">
+                                <i class="fa-regular fa-circle-play fa-2x thumbplay"></i>
+                            </div>
                             <h4>Lana del Ray</h4>
                         </div>
                         <div class="col">
-                            <img class="round-img" src="./img/einaudi.jpeg" alt="">
+                            <div>
+                                <img class="round-img thumbnail" src="./img/einaudi.jpeg" alt="">
+                                <i class="fa-regular fa-circle-play fa-2x thumbplay"></i>
+                            </div>
                             <h4>Ludovico Einaudi</h4>
                         </div>
                     </div>
