added progress bar hover

--- a/index.html
+++ b/index.html
@@ -235,11 +235,12 @@
             <div class="bar d-flex just-center align-center">
                 <span>0:25</span>
                 <div class="time-bar">
-                    <div class="progress"></div>
+                    <div class="progress">
+                        <div class="dot"></div>
+                    </div>
                 </div>
                 <span>4:35</span>
             </div>
-
         </div>
 
         <!-- SHARE SECTION -->
@@ -250,7 +251,6 @@
             <div class="time-bar">
                 <div class="progress"></div>
             </div>
-
         </div>
 
     </footer>
