added "active" details

--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
                 <!-- NAVBAR -->
                 <div class="menu d-flex just-center align-center">
                     <ul class="d-flex just-center align-center wrap">
-                        <li><a href="#">IN EVIDENZA</a></li>
+                        <li>
+                            <a href="#">IN EVIDENZA</a>
+                            <div class="prova"></div>
+                        </li>
                         <li><a href="#">PODCAST</a></li>
                         <li><a href="#">CLASSIFICHE</a></li>
                         <li><a href="#">GENERI E MOOD</a></li>
