renamed class name prova

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <ul class="d-flex just-center align-center wrap">
                         <li>
                             <a href="#">IN EVIDENZA</a>
-                            <div class="prova"></div>
+                            <div class="border-active"></div>
                         </li>
                         <li><a href="#">PODCAST</a></li>
                         <li><a href="#">CLASSIFICHE</a></li>
